subnets.tf
# CREATE SUBNETS
resource "aws_subnet" "public_a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "var.public_a_cidr"
  availability_zone       = "${var.region_name}a"
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.project_name}-public-a"
  }
}

resource "aws_subnet" "public_b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "var.public_b_cidr"
  availability_zone       = "${var.region_name}b"
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.project_name}-public-b"
  }
}

resource "aws_subnet" "private_a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "var.private_a_cidr"
  availability_zone       = "${var.region_name}a"
  map_public_ip_on_launch = false

  tags = {
    Name = "${var.project_name}-private-a"
  }
}

resource "aws_subnet" "private_b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "var.private_b_cidr"
  availability_zone       = "${var.region_name}b"
  map_public_ip_on_launch = false

  tags = {
    Name = "${var.project_name}-private-b"
  }
}

resource "aws_subnet" "data_a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "var.data_a_cidr"
  availability_zone       = "${var.region_name}a"
  map_public_ip_on_launch = false

  tags = {
    Name = "${var.project_name}-data-a"
  }
}

resource "aws_subnet" "data_b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "var.data_b_cidr"
  availability_zone       = "${var.region_name}b"
  map_public_ip_on_launch = false

  tags = {
    Name = "${var.project_name}-data-b"
  }
}
